--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 pytest = "^6.2.4"
+wemake-python-styleguide = "^0.15.3"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.26.0"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
