--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ ignore =
   WPS110
   # FIX ME docstrings
   D100, D103, D104
+  # it is okay to use open() without context manager
+  WPS515
 
 per-file-ignores =
   # it is possibble to have prints in scripts
