--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/scripts/*.py: WPS421
   # it is ok to have string concatenation, nested functions and many local variables in formaters
-  gendiff/formaters/*.py: WPS336, WPS210, WPS430
+  gendiff/formaters/*.py: WPS336, WPS210, WPS430, WPS235
 
 [tool:pytest]
 norecursedirs = __pycache__
