fixed linter errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ ignore =
   D100, D103, D104
   # it is okay to use open() without context manager
   WPS515
+  # it is okay have logic in __init__.py
+  WPS412
 
 per-file-ignores =
   # it is possibble to have prints in scripts
